fix for category spacing

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -134,7 +134,7 @@
 }
 
 .pagination {
-  margin-top: 2rem;
+  margin-top: 1.4rem;
 
   &__title {
     display: flex;
